modify interface ObjectSerialization